--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "memoizee": "^0.4.14",
     "rimraf": "^3.0.0",
     "util": "^0.12.1",
-    "vscode-languageserver": "^5.2.1",
+    "vscode-languageserver": "^6.1.1",
+    "vscode-languageserver-textdocument": "^1.0.1",
     "vscode-uri": "^2.1.1",
     "walk-sync": "^2.0.2"
   },
