--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,7 @@ name: CI
 
 on:
   push:
-    branches:
-      - component-context-info-origin
-  pull_request: {}
+  pull_request:
 
 jobs:
   test:
@@ -14,6 +12,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
       - uses: volta-cli/action@v1
 
       - name: install dependencies
