--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -67,6 +67,9 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
 
+      - name: Install Yarn
+        run: npm install -g yarn
+
       - name: install dependencies
         run: yarn install --frozen-lockfile --ignore-engines
 
@@ -90,6 +93,9 @@ jobs:
       - uses: volta-cli/action@v1
         with:
           node-version: 12.x
+
+      - name: Install Yarn
+        run: npm install -g yarn
 
       - name: install dependencies
         run: yarn install --no-lockfile
