--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -67,9 +67,6 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
 
-      - name: Install Yarn
-        run: npm install -g yarn
-
       - name: install dependencies
         run: yarn install --frozen-lockfile --ignore-engines
 
@@ -77,7 +74,7 @@ jobs:
         run: yarn compile
 
       - name: test
-        run: yarn yarn test:coverage
+        run: yarn test:coverage
 
   floating-dependencies:
     name: Floating Dependencies
@@ -94,9 +91,6 @@ jobs:
         with:
           node-version: 12.x
 
-      - name: Install Yarn
-        run: npm install -g yarn
-
       - name: install dependencies
         run: yarn install --no-lockfile
 
@@ -104,4 +98,4 @@ jobs:
         run: yarn compile
 
       - name: test
-        run: yarn yarn test:coverage
+        run: yarn test:coverage
