adds support for template-lint commenting

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "cross-spawn": "^7.0.3",
     "dag-map": "^2.0.2",
     "ember-meta-explorer": "^0.1.1",
+    "ember-template-recast": "^5.0.1",
     "extract-tagged-template-literals": "^1.0.3",
     "find-up": "^4.1.0",
     "fs-extra": "^8.1.0",
