--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "dag-map": "^2.0.2",
     "ember-meta-explorer": "^0.2.1",
     "ember-template-recast": "^5.0.1",
-    "extract-tagged-template-literals": "^1.0.3",
+    "@lifeart/ember-extract-inline-templates": "^2.0.0",
     "find-up": "^4.1.0",
     "fs-extra": "^8.1.0",
     "fuzzaldrin": "^2.1.0",
