--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,11 @@
 {
   "compilerOptions": {
-    "target": "es6",
+    "target": "ES2018",
     "module": "commonjs",
     "allowSyntheticDefaultImports": true,
     "moduleResolution": "node",
     "sourceMap": true,
-    "lib" : [ "es2016" ],
+    "lib" : [ "es2018" ],
     "outDir": "./lib",
     "strictNullChecks": true,
     "noImplicitAny": true,
