--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "util": "^0.12.3",
     "vscode-languageserver": "^6.1.1",
     "vscode-languageserver-textdocument": "^1.0.1",
-    "vscode-uri": "^2.1.1",
+    "vscode-languageserver-protocol": "^3.16.0",
+    "vscode-jsonrpc": "^4.0.0",
+    "vscode-uri": "^3.0.2",
     "walk-sync": "^2.2.0"
   },
   "devDependencies": {
@@ -61,9 +63,7 @@
     "source-map-support": "^0.5.19",
     "ts-jest": "^26.4.4",
     "ts-node": "^8.10.2",
-    "typescript": "^4.1.3",
-    "vscode-jsonrpc": "^4.0.0",
-    "vscode-languageserver-protocol": "^3.14.1"
+    "typescript": "^4.1.3"
   },
   "husky": {
     "hooks": {
