--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
   "engines": {
     "node": ">= 10.16.3"
   },
-  "main": "lib/start-server.js",
-  "typings": "lib/start-server.d.ts",
+  "main": "dist/server.js",
+  "typings": "lib/server.d.ts",
   "dependencies": {
     "@glimmer/syntax": "^0.73.1",
     "@lifeart/ember-extract-inline-templates": "^2.0.0",
@@ -45,6 +45,9 @@
     "@types/memoizee": "^0.4.5"
   },
   "devDependencies": {
+    "ts-loader": "^8.0.14",
+    "webpack": "5.15.0",
+    "webpack-cli": "^4.3.1",
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
     "@types/jest": "^26.0.20",
     "@types/node": "^12.12.5",
@@ -88,6 +91,7 @@
   "scripts": {
     "changelog": "lerna-changelog",
     "clean": "rimraf lib/",
+    "build": "webpack --mode production",
     "compile": "tsc --skipLibCheck -p .",
     "lint": "eslint . --ext js,ts",
     "prepublish": "yarn clean && yarn compile",
@@ -96,7 +100,7 @@
     "watch": "tsc --watch -p ."
   },
   "volta": {
-    "node": "10.16.3",
+    "node": "10.17.0",
     "yarn": "1.22.4"
   }
 }
