--- a/.npmignore
+++ b/.npmignore
@@ -1,11 +1,24 @@
 /.vscode
+/.github
 /src
+/inst
+/lib/*.js
+/lib/*.js.map
 /test
+/dist/*.map
+/coverage
 /.editorconfig
+/.eslintrc.js
+/.eslintignore
 /.travis.yml
+/.gitignore
 /appveyor.yml
 /jest.config.js
 /tsconfig.json
 /tslint.json
 /yarn.lock
 /*.tgz
+/webpack.config.js
+/jest.config.js
+/appveyor.yml
+/tsconfig.json
