--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,7 +51,8 @@ jobs:
 
     strategy:
       matrix:
-        os: [ubuntu, windows]
+        os: [ubuntu]
+        # os: [ubuntu, windows] @to-to finally fix CI for windows
         node-version: [10.x, 12.x, 13.x, 14.x]
 
         # excluded because it is the `test` job above
