--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,20 +27,27 @@ jobs:
     name: Coverage
     runs-on: ubuntu-latest
     timeout-minutes: 10
+    continue-on-error: true
     needs: [test]
 
     steps:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0
+
       - uses: volta-cli/action@v1
 
       - name: install dependencies
         run: yarn install --frozen-lockfile
 
-      - run: yarn compile
-      - run: yarn test:coverage
-      - uses: codecov/codecov-action@v1
+      - name: compile codebase
+        run: yarn compile
+
+      - name: check coverage
+        run: yarn test:coverage
+
+      - name: submit coverage
+        uses: codecov/codecov-action@v1
 
   nodeX:
     name: Node ${{ matrix.node-version }} - ${{ matrix.os }}
