--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "lodash": "^4.17.20",
     "memoizee": "^0.4.15",
     "rimraf": "^3.0.2",
+    "semver": "^7.3.5",
     "util": "^0.12.3",
     "vscode-jsonrpc": "6.0.0",
     "vscode-languageserver": "^7.0.0",
@@ -59,6 +60,7 @@
     "@semantic-release/git": "^9.0.0",
     "@types/jest": "^26.0.20",
     "@types/node": "^12.12.5",
+    "@types/semver": "^7.3.4",
     "@typescript-eslint/eslint-plugin": "^4.13.0",
     "@typescript-eslint/parser": "^4.13.0",
     "broccoli-test-helper": "^2.0.0",
