--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
     "husky": "^4.3.7",
     "jest": "^26.6.3",
     "lerna-changelog": "^0.8.2",
-    "lint-staged": "^10.5.3",
+    "lint-staged": "^10.5.4",
     "nyc": "^15.1.0",
     "prettier": "^2.2.1",
     "source-map-support": "^0.5.19",
@@ -87,10 +87,7 @@
     }
   },
   "lint-staged": {
-    "*.ts": [
-      "yarn lint --fix",
-      "git add"
-    ]
+    "*.ts": "eslint --fix"
   },
   "prettier": {
     "tabWidth": 2,
