--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     "eslint": "^7.17.0",
     "eslint-config-prettier": "^7.1.0",
     "eslint-plugin-prettier": "^3.3.1",
-    "husky": "^4.3.7",
+    "husky": "^6.0.0",
     "jest": "^26.6.3",
     "lerna-changelog": "^0.8.2",
     "lint-staged": "^10.5.4",
@@ -80,11 +80,6 @@
     "typescript": "^4.1.3",
     "webpack": "5.15.0",
     "webpack-cli": "^4.3.1"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
   },
   "lint-staged": {
     "*.ts": "eslint --fix"
@@ -107,7 +102,8 @@
     "prepublish": "yarn clean && yarn compile",
     "test": "jest",
     "test:coverage": "rimraf inst/ && nyc instrument lib inst && nyc --no-clean --reporter=clover --reporter=json --reporter=lcov yarn run jest --no-coverage",
-    "watch": "tsc --watch -p ."
+    "watch": "tsc --watch -p .",
+    "prepare": "husky install"
   },
   "volta": {
     "node": "10.18.0",
